--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -16,6 +16,7 @@
   </span>
     <br>
     <br>
+    <span class='red'><%= flash[:owned] %></span>
   <table align='center'>
     <tr>
       <td class='small-font'>
