--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,6 @@
 <div class='center'>
   <h1 class='outline'>Login</h1>
+  <span class='red'><%= flash[:login] %></span>
   <form method='post' action='/login'>
     <input class='text' type='text' name='username' placeholder='Username'><br>
     <input class='text' type='password' name='password' placeholder='Password'><br>
