--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,9 @@
-<h1> All the Tweets...Need to add Welcome, current_user.name and add each Tweet's username </h1>
+<h1> All the Tweets </h1>
 <h2> Welcome, <%= current_user.username %>! </h2>
-<% @tweets.each do |tweet| %>
-  <li> <% tweet.user.username %> tweeted <a href="/tweets/<%= tweet.id %>"> <%= tweet.content %> </a></li>
+<% if !@tweets.empty? %>
+  <% @tweets.each do |tweet| %>
+    <li> <%= tweet.user.username %> tweeted <a href="/tweets/<%= tweet.id %>"> <%= tweet.content %> </a></li>
+  <% end %>
+<% else %>
+  <h4> No tweets yet! </h4>
 <% end %>
