--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -20,7 +20,7 @@
     <span class='red'><%= flash[:content] %></span>
   <h1 class='outline'>Edit Tweet</h1>
     <form method='POST' action='/tweets/<%= @tweet.id %>'>
-      <textarea name='content' rows='3' cols='50'><%= @tweet.content %></textarea>
+      <textarea name='content' rows='3' cols='50' required><%= @tweet.content %></textarea>
       <br>
       <br>
       <input class='submit' type='submit' value='submit'>
