--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -2,9 +2,9 @@
   <h1 class='outline'>Signup</h1>
   <span class='red'><%= flash[:fields] %></span>
   <form method='post' action='/signup'>
-    <input class='text' type='text' name='username' placeholder='Username'><br>
-    <input class='text' type='text' name='email' placeholder='Email'><br>
-    <input class='text' type='password' name='password' placeholder='Password'><br>
+    <input class='text' type='text' name='username' placeholder='Username' required><br>
+    <input class='text' type='text' name='email' placeholder='Email' required><br>
+    <input class='text' type='password' name='password' placeholder='Password' required><br>
     <br>
     <input class='submit' type='submit' value='submit' class='button'>
   </form>
