--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,6 +1,6 @@
 <h3>Login</h3>
 <form action="/login" method="POST">
-  <input type="text" name="user[username]" placeholder="Username:">
-  <input type="password" name="user[password]" placeholder="Password:">
-  <input type="submit" value="Log In">
+  <input type="text" name="user[username]" placeholder="Username:" id="username">
+  <input type="password" name="user[password]" placeholder="Password:" id="password">
+  <input type="submit" value="Log In" id="submit">
 </form>
