updated button and field ids in views to pass capybara testing

--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -3,5 +3,5 @@
   <input type="hidden" name="_method" value="PATCH">
   <label>Edit your tweet:</label>
     <input type="text" id="content" name="tweet[content]" value="<%= @tweet.content %>"><br></br>
-    <input type="submit" value="Edit tweet">
+    <input type="submit" id="submit" value="Edit tweet">
 </form>
