--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,6 +1,6 @@
 <form method="post" action="/signup">
 
-<label for="user_name">User Namr:</label>
+<label for="user_name">User Name:</label>
 <input type="text" name="username">
 
 <label for="email">Email:</label>
