--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,9 @@
+<%if logged_in? == false%>
 <h2>Welcome to Fwitter</h2>
-<a href="">Sign Up</a>
-<a href="">Log In</a>
+<a href="/login">Sign In</a>
+<a href="/signup">Sign Up</a>
+<% else %>
+<%Tweet.all.each do |tweet|%>
+	<a href=""><%=tweet.name%></a>
+	<%end%>
+<%end%>
