--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,3 +1,9 @@
-<form method="post" action="">
-	
+<form method="post" action="/login">
+	<label for="username">Username:</label>
+	<input type="text" name="username">
+	<br>
+	<label for="password">Password:</label>
+	<input type="password" name="password">
+	<br>
+	<input type="submit" value="Sign In" id="submit">
 </form>
