--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -8,5 +8,5 @@ Welcome to Fwitter. Please <a href="/signup">Sign Up</a> or log in below to cont
 <form action="/login" method="POST">
 	<input type="text" name="username" id="username" placeholder="Username:">
 	<input type="password" name="password" id="password" placeholder="Password:">
-	<input type="submit" value="Log In">
+	<input type="submit" value="submit" name="submit" id="submit">
 </form>
