--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,8 +1,8 @@
 <h1> New Tweet </h1>
 <form method="post" action="/tweets">
 <p>Fill in your tweet here</p>
-<input type="text" id="content" name="conent">
-<input type="submit" id="submit" value="Tweet!">
+<input type="text" id="content" name="content">
+<input type="submit" id="submit" value="submit" name="submit">
 </form>
 
 
