--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,12 +1,12 @@
-<h1>Welcome to your official Fwitter page!, <%= @user.username%>!!. Go ahead and get fweeeting!</h1>
+<h1>Welcome, <%=Helpers.current_user(session).username%></h1>
 
 <form method="get" action="/tweets/new">
 <input type="submit" name="New Tweet" id="New Tweet" value="New Tweet">
 </form>
 
-<h3> Your past tweets </h3>
+
 <table>
-<%@user.tweets.each{|tweet|%>
+<%Tweet.all.each{|tweet|%>
             <tr><td><%=tweet.content%></td><td><a href="/tweets/<%=tweet.id%>">View</td><td><a href="/tweets/<%=tweet.id%>/delete">Delete</td></tr>
 
 <%}%>
