--- a/app/views/users/home.erb
+++ b/app/views/users/home.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to your official Fwitter page!, <%= @user.username%>!!. Go ahead and get fweeeting!</h1>
+<h1>Welcome to your official Fwitter page!, <%= @user.username%>!!. Go ahead and get tweeting!</h1>
 
 <form method="get" action="/tweets/new">
 <input type="submit" name="New Tweet" id="New Tweet" value="New Tweet">
