--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -3,8 +3,8 @@
 <p><%=@tweet.content%></p>
 
 
-<a href="/tweets/<%=@tweet.id%>/edit">Edit TWeet</a>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
 
 <form method="get" action="/tweets/<%=@tweet.id%>/delete">
-<input type="text" name="Delete Tweet" id="Delete Tweet" value="Delete Tweet">
+<input type="submit" name="Delete Tweet" id="Delete Tweet" value="Delete Tweet">
 </form>
