Fixed Tweet Index Page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,6 +4,6 @@
 <a href="/signup">Sign Up</a>
 <% else %>
 <%Tweet.all.each do |tweet|%>
-	<a href=""><%=tweet.name%></a>
+	<a href=""><%=tweet.content%></a>
 	<%end%>
 <%end%>
