--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,3 +1,3 @@
 <%=@tweet.content%>
-<a href="/tweets/:id/edit">Edit Tweet</a>
-<a href="/tweets/:id/delete">Delete Tweet</a>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+<a href="/tweets/<%=@tweet.id%>/delete">Delete Tweet</a>
