Edit working moving onto delete tweet

--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,8 +1,8 @@
-<form method="post" action="/tweets/:id">
+<form method="post" action="/tweets/<%=@tweet.id%>">
 <input id="hidden" type="hidden" name="_method" value="patch">
 	<label for="content">Content:</label>
 	<input type="text" name="content" value="<%=@tweet.content%>">
 	<br>
 
-	<input type="submit" value="Post Tweet" id="submit">
+	<input type="submit" value="Edit Tweet" id="submit">
 </form>
