--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,3 +1,6 @@
 <%=@tweet.content%>
 <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
-<a href="/tweets/<%=@tweet.id%>/delete">Delete Tweet</a>
+<form method="post" action="/tweets/<%=@twee.id%>/delete">
+	<input id="hidden" type="hidden" name="_method" value="delete">
+	<input type="submit" value="Delete Tweet">
+</form>
