Fixed new tweet via find_by_slug

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,7 +12,8 @@
     <a href="/login">Sign In</a>
     <a href="/signup">Sign Up</a>
 <%else%>
-    Welcome, <%=@user.username%>
+    Welcome, <%=@user.username%> 
+    <a href="/logout">Log Out</a>
 <%end%>
     </nav>
     <div class="container">
