Set up Rack Flash
Stop more than one user with the same username

--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,3 +1,6 @@
+<% if flash.has?(:message) %>
+	<%= flash[:message] %>
+<% end %>
 <form method="post" action="/signup">
 
 <label for="user_name">User Name:</label>
