--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,3 +1,6 @@
+<% if flash.has?(:message) %>
+	<%= flash[:message] %>
+<% end %>
 <form method="post" action="/login">
 	<label for="username">Username:</label>
 	<input type="text" name="username">
