--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -10,7 +10,7 @@
 <input type="text" name="email">
 
 <label for="password">Password:</label>
-<input type="text" name="password">
+<input type="password" name="password">
 
 <input type="submit" value="Sign Up">
 
