--- a/app/views/users/show_user.erb
+++ b/app/views/users/show_user.erb
@@ -1,4 +1,4 @@
-<h1><%=@user.username%></h1>
+<h2>Username: <%=@user.username%></h2>
 <h3>Tweets:</h3>
 <%@user_tweets.each do |tweet|%>
 	<%=tweet.content%>
