--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,13 +8,13 @@
   <body>
     <nav>
 <%if logged_in? == false%>
-    Welcome
-    <a href="/login">Sign In</a>
-    <a href="/signup">Sign Up</a>
+    ||Welcome||
+    <a href="/login">Sign In</a>||
+    <a href="/signup">Sign Up</a>||
 <%else%>
-    Welcome, <a href="/users/<%=@user.slug%>"><%=@user.username%></a>
-    <a href="/tweets/new">New Tweet</a>
-    <a href="/logout">Log Out</a>
+    ||Welcome, <a href="/users/<%=@user.slug%>"><%=@user.username%></a>||
+    <a href="/tweets/new">New Tweet</a>||
+    <a href="/logout">Log Out</a>||
 <%end%>
     </nav>
     <div class="container">
