--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,3 +1,8 @@
+<% if flash.has?(:message) %>
+	<%= flash[:message] %>
+	<%flash[:message].clear%>
+	<br>
+<% end %>
 <form method="post" action="/tweets/new">
 
 	<label for="content">Content:</label>
