--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,6 +1,13 @@
-<h1><%=@user.username%></h1>
+<h1><%=@user.username%>'s Tweets</h1>
 <ul>
 <%  @user.tweets.each do |twit| %>
   <li><%=twit.content%></li>
 <%end%>
 </ul>
+
+
+<!--Log Out  -->
+<form method="post" action="/logout">
+  <input id="hidden" type="hidden" name "_method" value="patch">
+  <input type="submit" value="Log out">
+</form>
