--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,18 +1,19 @@
 <h1>New Tweet</h1>
 
-<form method="post" action="/tweets">
-  <label for="tweet_content">Tweet: </label><br>
-  <input type="text" name="tweet_content" id="tweet_content" required>
+<form method="post" action="/tweets/:id">
+  <label for="content">Tweet: </label><br>
+  <input type="text" name="content" id="content" required>
 
   <br><br>
 
-  <input type="submit" value="Tweet">
+  <input type="submit" value="submit">
 </form>
 
 
 
 <!--Log Out  -->
+<!--<br>
 <form method="post" action="/logout">
   <input id="hidden" type="hidden" name "_method" value="patch">
   <input type="submit" value="Log out">
-</form>
+</form> -->
