--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,11 +1,17 @@
 <h1>Tweet</h1>
 
-<%=@tweet.content%>
+<p><%=@tweet.content%></p>
 
+<br><br>
+<form method="post" action="/tweets/delete">
+  <input id="hidden" type="hidden" name "_method" value="delete">
+  <input type="submit" value="Delete Tweet">
+</form>
 
 
 <!--Log Out  -->
+<!--<br>
 <form method="post" action="/logout">
   <input id="hidden" type="hidden" name "_method" value="patch">
   <input type="submit" value="Log out">
-</form>
+</form> -->
