--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,6 +1,6 @@
 <h1>New Tweet</h1>
 
-<form method="post" action="/tweets/:id">
+<form method="post" action="/tweets/new">
   <label for="content">Tweet: </label><br>
   <input type="text" name="content" id="content" required>
 
