--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -3,9 +3,9 @@
 <p><%=@tweet.content%></p>
 
 <br><br>
-<form method="post" action="/tweets/delete">
+<form method="post" action="/tweets/:id/delete">
   <input id="hidden" type="hidden" name "_method" value="delete">
-  <input type="submit" value="Delete Tweet">
+  <input type="submit" name="delete" id="delete" value="Delete Tweet">
 </form>
 
 
