--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -8,10 +8,7 @@
 
 <!-- To New Tweet Page -->
 <br>
-<form method="post" action="/tweets/new">
-  <input id="hidden" type="hidden" name "_method" value="patch">
-  <input type="submit" value="New Tweet">
-</form>
+<a href="/tweets/new">New Tweet</a>
 
 <!--Log Out  -->
 <br>
