--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,17 +1,18 @@
 <h1>Tweet</h1>
-
-<p><%=@tweet.content%></p>
-
+<p>
+<%=@tweet.content%>
+</p>
 <br><br>
-<form method="post" action="/tweets/:id/delete">
-  <input id="hidden" type="hidden" name "_method" value="delete">
-  <input type="submit" name="delete" id="delete" value="Delete Tweet">
-</form>
+<a href="/tweets">Tweets</a>
+<br>
+<a href='/tweets/new'>New Tweet</a>
+<br>
+<a href='/tweets/<%=@tweet.id%>/edit'>Edit Tweet</a>
 
 
 <!--Log Out  -->
-<!--<br>
+<br>
 <form method="post" action="/logout">
-  <input id="hidden" type="hidden" name "_method" value="patch">
-  <input type="submit" value="Log out">
-</form> -->
+  <input id="hidden" type="hidden" name "_method" value="delete">
+  <input type="submit" value="Delete Tweet">
+</form>
