--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,10 +1,10 @@
 <h1>Edit Tweet</h1>
-<p><%=@tweet.content%></p>
+<p><%=@edit_tweet.content%></p>
 
-<form method="post" action="/tweets/<%=@tweet.id%>">
+<form method="post" action="/tweets/<%=@edit_tweet.id%>">
   <input id="hidden" type="hidden" name "_method" value="patch">
   <label for="content">New content: </label><br>
-  <input type="text" name="content" value="<%=@tweet.content%>" required><br>
+  <input type="text" name="content" value="<%=@edit_tweet.content%>" required><br>
   <input type="submit" value="submit">
 </form>
 
