--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,7 +1,7 @@
 <h1>Welcome, This is Fwitter!</h1>
 <ul>
 <%Tweet.all.each do |twit|%>
-  <li><%=@user.username%>: <%=twit.content%></li>
+  <li><a href="/tweets/<%=twit.id%>"><%=twit.user.username%>: <%=twit.content%></li>
 <%end%>
 </ul>
 
