--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,6 +1,6 @@
 <form action="/signup" method="post">
-  <input type="text" name="username" placeholder="user name" required>
-  <input type="email" name="email" placeholder="email address" required>
-  <input type="password" name="password" placeholder="password" required>
+  <input type="text" name="username" placeholder="user name" required><br>
+  <input type="email" name="email" placeholder="email address" required><br>
+  <input type="password" name="password" placeholder="password" required><br>
   <input type="submit" name="" value="Sign Up">
 </form>
