--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,8 @@
 Welcome, <%= @user.username %>!
+
+<% Tweet.all.each do |t| %>
+<div class="tweet">
+  <%= t.user.username %><br>
+  <%= t.content %>
+</div>
+<% end %>
