--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/style.css">
     <title>Fwitter - Join Nearly a Dozen Users Today!</title>
   </head>
   <body>
