--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,7 +1,7 @@
 <div class="tweet">
-  <%= @tweet.user.username %><br>
-  <%= @tweet.content %><br>
-
+  <h2>@<%= @tweet.user.username %></h2>
+  <div class="tweet-content"><%= @tweet.content %></div><br>
+  <div class="align-right">
   <form action="/tweets/<%=@tweet.id%>/edit" method="get">
     <input type="submit" value="Edit Tweet">
   </form>
@@ -10,5 +10,6 @@
       <input id="hidden" type="hidden" name="_method" value="delete">
       <input type="submit" value="Delete Tweet">
     </form>
+    </div>
 
 </div>
