--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,7 +1,7 @@
 
 <% @user.tweets.each do |t| %>
 <div class="tweet">
-  <%= @user.username %><br>
-  <%= t.content %>
+  <h2>@<%= @user.username %></h2>
+  <div class="tweet-content"><%= t.content %></div>
 </div>
 <% end %>
