Finish styling, add header

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,9 @@
-<div class="tweet">Welcome to Fwitter!
-
-<a href="/signup">Sign Up!</a>
-<a href="/login">Log In!</a>
+<div class="tweet center"><h2>Welcome to Fwitter!</h2>
+<br>
+<form action="/signup" method="get">
+  <input type="submit" value="Sign up">
+</form>
+<form action="/login" method="get">
+  <input type="submit" value="Log in">
+</form>
 </div>
