--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,6 +1,9 @@
-<form action="/signup" method="post">
-  <input type="text" name="username" placeholder="user name" required><br>
-  <input type="email" name="email" placeholder="email address" required><br>
-  <input type="password" name="password" placeholder="password" required><br>
-  <input type="submit" name="" value="Sign Up">
-</form>
+<div class="tweet">
+  <h3>Register an account!</h3>
+  <form action="/signup" method="post">
+    <input type="text" name="username" placeholder="Username" required><br><br>
+    <input type="email" name="email" placeholder="Email Address" required><br><br>
+    <input type="password" name="password" placeholder="Password" required><br><br>
+    <input type="submit" name="" value="Sign Up">
+  </form>
+</div>
