--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,6 +6,19 @@
     <title>Fwitter - Join Nearly a Dozen Users Today!</title>
   </head>
   <body>
+    <header>
+      <div id="logo">Fwitter!</div>
+      <% if signed_in? %>
+        <span class = "white-text">Welcome, <%= @user.username %>!</span> |
+        <a href="/tweets">All Tweets</a> |
+        <a href="/users/<%= @user.slug %>">Your Tweets</a> |
+        <a href="/tweets/new">New Tweet</a> |
+        <a href="/logout">Log Out</a>
+      <% else %>
+        <a href="/signup">Sign Up</a> |
+        <a href="/login">Log In</a>
+      <% end %>
+    </header>
     <%= yield %>
   </body>
 </html>
