--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,8 @@
-<form action="/login" method="post">
-  <input type="text" name="username" placeholder="user name" required><br>
-  <input type="password" name="password" placeholder="password" required><br>
-  <input type="submit" title="submit" value="Log in">
-</form>
+<div class="tweet">
+  <h3>Enter your login info; we're so excited!!</h3>
+  <form action="/login" method="post">
+    <input type="text" name="username" placeholder="Username" required>
+    <input type="password" name="password" placeholder="Password" required><br><br>
+    <input type="submit" title="submit" value="Log in">
+  </form>
+</div>
