--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,44 @@
 body {
-  background-color: #afceff;
+  background-color: #7fa8e8;
   font-family: sans-serif;
+}
+
+header {
+  padding: 10px 20px 20px;
+  margin-bottom: 20px;
+  color: #ccc;
+
+}
+
+header a {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #fff;
+}
+
+#logo {
+  font-size: 300%;
+  font-weight: bold;
+  display: inline;
+  color: #fff;
+}
+
+.white-text {
+  color: #fff;
 }
 
 .tweet {
   display: block;
-  width: 40%;
+  width: 60%;
   background-color: #fff;
   margin: auto;
   padding: 5px 20px 15px;
   border-radius: 20px;
   /* box-shadow: 3px 3px 5px #888; */
+}
+
+.center {
+  text-align: center;
 }
 
 .tweet-content {
@@ -25,10 +53,14 @@ form {
   display: inline;
 }
 
+input {
+  font-size: 150%;
+  text-transform: uppercase;
+}
+
 input[type="submit"] {
   background-color: #fff;
   padding: 5px;
-  border-style: none solid solid none;
+  border-style: none none none solid;
   border-color: #2176ff;
-  border-radius: 3px;
 }
