right align login and signup buttons

--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -4,6 +4,6 @@
     <input type="text" name="username" placeholder="Username" required><br><br>
     <input type="email" name="email" placeholder="Email Address" required><br><br>
     <input type="password" name="password" placeholder="Password" required><br><br>
-    <input type="submit" name="" value="Sign Up">
+    <div class="align-right"><input type="submit" name="" value="Sign Up"></div>
   </form>
 </div>
