--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,6 +3,6 @@
   <form action="/login" method="post">
     <input type="text" name="username" placeholder="Username" required>
     <input type="password" name="password" placeholder="Password" required><br><br>
-    <input type="submit" title="submit" value="Log in">
+    <div class="align-right"><input type="submit" title="submit" value="Log in"></div>
   </form>
 </div>
