--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,12 +1,12 @@
 <h1>Create a Tweet</h1>
 
 <form method="POST" action="/tweets/new">
-Content: <input type="text" name="content"><br></br>
+Content: <input type="text" name="content" autofocus><br></br>
 
-<input type="submit" value="submit">
+<input type="submit" value="submit"> <a href="/tweets">Cancel</a>
 
 </form></p>
 
 <hr>
 <a href="/tweets">Home</a></p>
-<a href="/logout">Logout</a>
+Logged in as <a href="/users/<%= current_user.username %>"><%= current_user.username %></a>. <a href="/logout">Logout</a>
