--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,9 +1,23 @@
-<h1>Profile for <%= @user.username %></h1>
+<h1><%= @user.username %>'s Profile</h1>
 
-<h2><%= @user.username %>'s Tweets</h2>
+<h2>Tweets: </h2>
 
-<ul>
-<% @tweets.each do |tweet| %>
-  <li><%= tweet.content %></li>
+<% if @tweets.length == 0 %>
+  You have no tweets!
+<% else %>
+  <ul>
+  <% @tweets.reverse.each do |tweet| %>
+    <li><a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a></li>
+  <% end %>
+  </ul>
 <% end %>
-</ul>
+
+<hr>
+<% if logged_in? %>
+  <a href="/tweets">Home</a></p>
+  <a href="/tweets/new">Tweet</a></p>
+  Logged in as <a href="/users/<%= current_user.username %>"><%= current_user.username %></a>. <a href="/logout">Logout</a>
+<% else %>
+  <a href="/login">Log In</a></p>
+  <a href="/signup">Sign Up</a>
+<% end %>
