debug routes and views

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -3,6 +3,6 @@
 	<label for="content">Tweet here:</label>
 	<textarea name="content" id="content" cols="30" rows="10"></textarea>
 
-	<button type="submit">Tweet</button>
+	<button type="submit" id="submit">Tweet</button>
 
 </form>
