--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,8 +1,9 @@
 <h1>Fwitter!</h1>
 <h2>Sign Up For A New And Beautiful World</h2>
 <form action="/signup" method="POST">
+	<label for="email">Email: </label><input type="text" name="email">
 	<label for="username">Username: </label><input type="text" name="username">
 	<label for="password">Password: </label><input type="text" name="password">
 
-	<button type="submit">Signup</button>
+	<button type="submit" id="submit">Signup</button>
 </form>
