--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,5 +3,5 @@
 	<label for="username">Username: </label><input type="text" name="username">
 	<label for="password">Password: </label><input type="text" name="password">
 
-	<button type="submit">Login</button>
+	<button type="submit" id="submit">Login</button>
 </form>
