--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,2 +1,13 @@
 <h1>Tweet By <%= @tweet.user.username %></h1>
+
+	<form action="/tweets/<%=@tweet.id%>" method="POST">
+		<input type="hidden" name="_method" value="delete">
+		<button type="submit" value="Delete Tweet">Delete Tweet</button>
+	</form>
+
+	<form action="/tweets/<%=@tweet.id%>" method="POST">
+		<input type="hidden" name="_method" value="patch">
+		<button type="submit">Edit Tweet</button>
+	</form>
+
 <p><%= @tweet.content %></p>
