--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -2,9 +2,16 @@
 
 <%@tweets.each do |tweet|%>
 	<hr>
+
+	<form action="/tweets/<%=tweet.id%>" method="POST">
+		<input type="hidden" name="_method" value="delete">
+		<button type="submit" id="submit" value="Delete Tweet">Delete Tweet</button>
+	</form>
+
 	<div class="tweet">
 		<h3><%= tweet.user.username %> tweeted:</h3>
 		<p><%= tweet.content %></p>
 	</div>
+
 	<hr>
 <%end%>
