--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -5,9 +5,6 @@
 		<button type="submit" value="Delete Tweet">Delete Tweet</button>
 	</form>
 
-	<form action="/tweets/<%=@tweet.id%>" method="POST">
-		<input type="hidden" name="_method" value="patch">
-		<button type="submit">Edit Tweet</button>
-	</form>
+	<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
 
 <p><%= @tweet.content %></p>
