--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Flatiron Bank</title>
+  <title>Flatiron Twitter</title>
 </head>
   <body>
     <%= yield %>
