--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,6 +1,14 @@
 <h3>Tweet:</h3>
 <ul>
   <%@user.tweet.each do |tweet| %>
-  <li><%= tweet.name %></li>
+  <li><%= tweet.content %></li>
   <%end%>
 </ul>
+<br>
+<form action="/tweets/<%=@tweet.id%>/edit" method="GET">
+  <input type="submit" value="Edit Tweet">
+</form>
+<form action="/tweets/<%=@tweet.id%>/delete" method="Post">
+  <input id="hidden" type="hidden" name="_method" value="DELETE">
+  <input type="submit" id value="Delete Tweet">
+</form>
