--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,10 +1,5 @@
-<h3>Tweet:</h3>
-<ul>
-  <%@user.tweet.each do |tweet| %>
-  <li><%= tweet.content %></li>
-  <%end%>
-</ul>
-<br>
-<form action="/tweets/<%=@tweet.id%>/edit" method="GET">
-  <input type="submit" value="Edit Tweet">
+<h3>Edit Tweet</h3>
+<form action="/tweets/<%=@tweet.id %>" method="POST">
+  <input type="text" name="content" value="<%=@tweet.content %>" placeholder="content">
+  <input type="submit" value="submit">
 </form>
