--- a/app/views/users/create_users.erb
+++ b/app/views/users/create_users.erb
@@ -1,3 +1,6 @@
+<% if flash[:message] %>
+  <%= flash[:message] %>
+<% end %>
 <h1>Sign Up for a Fwitter Account:</h1>
 <form action="/signup" method="post">
   <label for="username">Username: </label>
