--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,6 @@
-<h1>Welcome, </h1>
+<h1>Welcome, <%= current_user.username.capitalize %> </h1>
+<ul>
+  <% Tweet.all.each do |tweet| %>
+    <li><%= tweet.content %></li>
+  <% end %>
+</ul>
