--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -7,5 +7,5 @@
   <input type="text" name="username" id="username" value=""><br>
   <label for="password">Password: </label>
   <input type="password" name="password" id="password" value=""><br>
-  <input type="submit" name="" value="Log In">
+  <input type="submit" name="" value="submit">
 </form>
