--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,6 +1,6 @@
 <h3><%= @tweet.user.username.capitalize %>'s Tweet:</h3>
 <p><%= @tweet.content %></p>
-<form action="tweets/delete" method="post">
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
   <input type="hidden" name="_method" value="delete">
   <input type="submit" name="" value="Delete Tweet">
 </form><br>
