--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,4 +1,4 @@
-<h1>Create Tweet</h1>
+<h1>New Tweet</h1>
 <form action="/tweets" method="POST">
   <input type="text" name="content" value="tweet content" id="content">
   <input type="submit" value="submit">
