Stubbed out code for controllers and updated views.

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,4 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-
+<head>
+  <title>Fwitter</title>
+  <h4>Please sign up or log in.</h4>
+  <a href="/signup">Sign Up</a>
+  <a href="/login">Log In</a>
+</head>
+<body>
+<%= yield %>
+</body>
 </html>
