--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,4 @@
 <h1> Welcome to Fwitter </h1>
+<h4>Please sign up or log in.</h4>
+<p><a href="/signup">Signup</a></p>
+<p><a href="/login">Log In</a></p>
