--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,14 +1,17 @@
-<h1>New User Sign Up:</h1>
+<h1>Sign Up for Fwitter:</h1>
 
+<% if flash.has?(:message) %>
+      <p> <%= flash[:message] %> </p>
+  <% end %>
 
     <form action="/signup" method="POST">
-        <label for="username">Username *</label>
+        <label for="username">Username :</label>
         <input id="username" type="text" name="username">
         <br>
-        <label for="email">Email *</label>
+        <label for="email">Email :</label>
         <input id="email" type="email" name="email">
         <br>
-        <label for="password">Password *</label>
+        <label for="password">Password :</label>
         <input id="password" type="password" name="password">
         <br><br>
         <input type="submit" value="Sign Up">
