--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
 <head>
-  
+  <meta charset="utf-8">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 </head>
 <body>
+  <% if logged_in? %>
+
+        <p><a href="/tweets/new"> Create Tweet </a></p>
+        <a href="/logout"> Log Out </a>
+        <p><h2>Welcome, <%=current_user.username %></h2></p>
+
+      <% else %>
+        <a href="/signup">Sign Up</a>
+
+        <a href="/login"> Sign In </a>
+      <%end %>
 <%= yield %>
 </body>
 </html>
