--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -4,5 +4,8 @@
   <p>Name: <input type="text" name="username"></p>
   <p>Email: <input type="text" name="email"></p>
   <p>Password: <input type="text" name="password"></p>
-  <input type="submit" value="Sign Up">
+  <input type="submit" value="submit">
 </form>
+
+<br><br><br>
+<a href="/">Home</a>
