--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,7 +4,7 @@
 Get in-the-moment course updates and watch study group sessions, in real time, from every angle.</p>
 
 <h3>Already a user?</h3>
-<p><a href="/users/login">Log In Here</a></p>
+<p><a href="/login">Log In Here</a></p>
 
 <h3>New to Flatiron Twitter?</h3>
-<p><a href="/users/create_user">Sign Up Here</a></p>
+<p><a href="/signup">Sign Up Here</a></p>
