--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -10,8 +10,9 @@
   <h1>Welcome to Fwitter</h1>
 
   <ul>
-    <li><a href="/login">Login</a></li>
-    <li><a href="/signup">Signup</a></li>
+    <h4>Please log in or sign up to access your fwitter account</h4>
+    <li><a href="/login">Log In</a></li>
+    <li><a href="/signup">Sign Up</a></li>
   </ul>
  </body>
 </html>
