--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,1 +1,17 @@
-<h1>Login</h1>
+<h1>Log In Below:</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Log In Form</title>
+  </head>
+  <body>
+
+    <form action="/login" method="post">
+  	  Email: <input type="text" name="email"><br><br>
+  	  Password: <input type="text" name="password"><br><br>
+	  <input type="submit" value="Log In">
+	 </form>
+
+  </body>
+</html>
