modified controllers and views

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -8,8 +8,12 @@
   <body>
 
     <form action="/login" method="post">
-  	  Email: <input type="text" name="email"><br><br>
-  	  Password: <input type="text" name="password"><br><br>
+      <h3>User Name:</h3>
+        <input type="text" name="username">
+      <h3>Email:</h3>
+        <input type="text" name="email">
+      <h3>Password:</h3>
+        <input type="text" name="password"><br><br>
 	  <input type="submit" value="Log In">
 	 </form>
 
