--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -8,9 +8,12 @@
   <body>
 
     <form action="/signup" method="post">
-  	  Name: <input type="text" name="username"><br><br>
-  	  Email: <input type="text" name="email"><br><br>
-  	  Password: <input type="text" name="password"><br><br>
+      <h3>User Name:</h3>
+        <input type="text" name="username">
+      <h3>Email:</h3>
+        <input type="text" name="email">
+      <h3>Password:</h3>
+        <input type="text" name="password"><br><br>
 	  <input type="submit" value="Sign Up">
 	 </form>
 
