modified controllers, models & views

--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,3 +1,19 @@
-<h1>Welcome, To Tweets Index</h1>
-
-<a href="/logout">Log Out</a>
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta charset="UTF-8">
+  <title>Show User's Tweets</title>
+ </head>
+ <body>
+  <h1> Welcome, To Show User's Tweets </h1>
+    <h3>Tweets:</h3>
+    <% if @tweets.size > 0%>
+      <ul>
+        <% @tweets.each do |tweet| %>
+          <li> <%= tweet.content %> </a></li>
+        <% end %>
+      </ul>
+    <%else%>
+      <h2>There are no tweets to display!</h2>
+    <%end%>
+ </body
