--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -14,7 +14,7 @@
         <input type="text" name="email">
       <h3>Password:</h3>
         <input type="text" name="password"><br><br>
-	  <input type="submit" value="Log In">
+	  <input type="submit" value="submit">
 	 </form>
 
   </body>
