--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -2,13 +2,14 @@
 <html>
  <head>
   <meta charset="UTF-8">
-  <title>Show All Tweets</title>
+  <title>Show User Tweets</title>
  </head>
  <body>
-  <h1> Welcome, To Show All Tweets </h1>
+  <h1> Show User's Tweets
+	<h2>User Name: <%=@user.name%></h1>
     <h3>Tweets:</h3>
     <ul>
-      <% @tweets.each do |tweet| %>
+      <% @user.tweets.each do |tweet| %>
         <li> <%= tweet.content %> </a></li>
       <% end %>
     </ul>
