--- a/app/views/tweets/tweets_index.erb
+++ b/app/views/tweets/tweets_index.erb
@@ -2,10 +2,10 @@
 <html>
  <head>
   <meta charset="UTF-8">
-  <title>Show User's Tweets</title>
+  <title>Show All Tweets</title>
  </head>
  <body>
-  <h1> Welcome, To Show User's Tweets </h1>
+  <h1> Welcome, To Show All Tweets </h1>
     <h3>Tweets:</h3>
     <% if @tweets.size > 0%>
       <ul>
