--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -10,7 +10,7 @@
   <h1>Welcome to Fwitter</h1>
 
   <ul>
-    <h4>Please log in or sign up to access your fwitter account</h4>
+    <h4>Please log in or sign up to access your Fwitter account</h4>
     <li><a href="/login">Log In</a></li>
     <li><a href="/signup">Sign Up</a></li>
   </ul>
