--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,1 +1,15 @@
-<h1>Create A New Tweet</h1>
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta charset="UTF-8">
+  <title>Create A New Tweet</title>
+ </head>
+ <body>
+    <h1>New Tweet</h1>
+    <form action="/tweets" method="POST">
+      Content: <input  type="text" id="content" name="content">
+      <br></br>
+      <input type="submit" value="submit">
+    </form>
+  </body>
+</html>
