--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,1 +1,14 @@
-<h1>Show A Tweet</h1>
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta charset="UTF-8">
+  <title>Show A Tweet</title>
+ </head>
+ <body>
+	  <h1>User: <%=@user.username%></h1>
+    <h3>Tweet:</h3>
+  	 <h4><%=@tweet.content%></h4>
+   <h3><a href="/tweets/<%=@tweet.id%>/edit"><Edit Tweet></a></h3>
+   <h3><a href="/tweets/<%=@tweet.id%>/delete"><Delete Tweet></a></h3>
+ </body>
+</html>
