--- a/app/views/users/show_user_tweets.erb
+++ b/app/views/users/show_user_tweets.erb
@@ -6,16 +6,17 @@
  </head>
  <body>
   <h1> Welcome, To Show User Tweets </h1>
-	<h2>User Name: <%=@user.name%></h1>
+	<h2>User Name: <%=@user.username%></h1>
   <% if @user.tweets.size > 0%>
     <h3>Tweets:</h3>
     <ul>
       <% @user.tweets.each do |tweet| %>
-        <li> <%= tweet.content %> </a></li>
+        <li><h4><a href="/tweets/<%=tweet.id%>"><%=tweet.content%></a><h4></li>
       <% end %>
     </ul>
   <%else%>
     <h2>There are no tweets to display!</h2>
   <%end%>
+  <h4><a href="/tweets/new">Create A New Tweet</a></h4>
  </body>
 </html>
