--- a/app/views/tweets/tweets_index.erb
+++ b/app/views/tweets/tweets_index.erb
@@ -17,5 +17,7 @@
     <%else%>
       <h2>There are no tweets to display!</h2>
     <%end%>
+    <h4><a href="/tweets/new">Create A New Tweet</a></h4>
+    <h4><a href="/logout">Log Out</a></h4>
  </body>
 </html>
