--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -13,9 +13,8 @@
       <h3>Email:</h3>
         <input type="text" name="email">
       <h3>Password:</h3>
-        <input type="text" name="password"><br><br>
+        <input type="password" name="password"><br><br>
 	  <input type="submit" value="submit">
 	 </form>
-
   </body>
 </html>
