--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -13,5 +13,7 @@
       <br></br>
       <input type="submit" value="submit">
     </form>
+    <h4><a href="/users/<%=@user.slug%>">Show My Tweets</a></h4>
+    <h4><a href="/logout">Log Out</a></h4>
   </body>
 </html>
