--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -5,14 +5,14 @@
   <title>Create A New Tweet</title>
  </head>
  <body>
-    <h2>User Name: <%=@user.username%></h1>
+    <h2>User Name: <%=session[:user].username%></h1>
     <h3>New Tweet:</h3>
     <form action="/tweets" method="POST">
       Content: <input  type="text" id="content" name="content">
       <br></br>
       <input type="submit" value="submit">
     </form>
-    <h4><a href="/users/<%=@user.slug%>">Show My Tweets</a></h4>
+    <h4><a href="/users/<%=session[:user].slug%>">Show My Tweets</a></h4>
     <h4><a href="/logout">Log Out</a></h4>
   </body>
 </html>
