--- a/app/views/homepage.erb
+++ b/app/views/homepage.erb
@@ -1,3 +1,14 @@
 <h1>Welcome to Fwitter</h1>
 
-<a href="/sessions/login">Log In</a>
+<% if logged_in?%>
+
+<a href="/logout">Log out </a>
+
+<%else%>
+<a href="/login">Log In</a>
+<a href="/signup">Sign Up</a>
+
+<%end%>
+
+
+
