--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,12 +1,11 @@
 
 <h1>New User Signup</h1>
-<form>
-    <form method="POST" action="/signup">
+<form method="post" action="/signup">
     username:<input type="text" id="username" name="user[username]">
     <br></br>
     email <input type="text" id="email" name="user[email]">
     <br></br>
-    password<input type="text" id="password" name="user[password]">
+    password<input type="password" id="password" name="user[password]">
 
    
     <input type="submit" value="Signup">
