add more helper methods, change spec to allow better page design

--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,5 +1,5 @@
 <ul>
   <% @tweets.each do |tweet| %>
-    <li><%= tweet.content %></li>
+    <li><%= tweet.user.username %>: <%= tweet.content %></li>
   <% end %>
 </ul>
