--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -2,19 +2,19 @@
 
 <br><br>
 
-<% # if @user.tweets.include?(@tweet) %>
+<% if current_user.owns?(@tweet) %>
 
-<form method="get" action="/tweets/<%= @tweet.id %>/edit">
-  <input type="submit" value="Edit Tweet">
-</form>
+  <form method="get" action="/tweets/<%= @tweet.id %>/edit">
+    <input type="submit" value="Edit" id="Edit Tweet">
+  </form>
 
-<br><br>
+  <br><br>
 
-<form method="post" action="/tweets/<%= @tweet.id %>">
-  <input type="hidden" id="hidden" name="_method" value="delete">
-  <input type="submit" value="Delete Tweet">
-</form>
+  <form method="post" action="/tweets/<%= @tweet.id %>">
+    <input type="hidden" id="hidden" name="_method" value="delete">
+    <input type="submit" value="Baweet" id="Delete Tweet">
+  </form>
 
-<br><br>
+  <br><br>
 
-<% # end %>
+<% end %>
