login page works

--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -2,7 +2,7 @@
 <h1>Sign Up Below:</h1>
 
 <form action="/signup" method="post">
-  <p><label>Userame: <input type="text" name="username"></label></p>
+  <p><label>Username: <input type="text" name="username"></label></p>
   <p><label>Email: <input type="text" name="email"</label></p>
   <p><label>Password: <input type="text" name="password"</label></p>
   <p><button type="submit" value="submit">Sign Up</button>
