--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -2,5 +2,5 @@
 
 <h2><a href="/users/<%= @tweet.user.slug %>"><%= @tweet.user.username %></a></h2>
 
-<h3><a href="/tweets/<%= @tweet.id %>/edit">Edit This Tweet</a></h3>
-<h3><a href="/tweets/<%= @tweet.id %>/delete">Delete This Tweet</a></h3>
+<h3><a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a></h3>
+<h3><a href="/tweets/<%= @tweet.id %>/delete">Delete Tweet</a></h3>
