--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,6 +1,7 @@
 <h1><%= @tweet.content %></h1>
 
-<h2><a href="/users/<%= @tweet.user.slug %>"><%= @tweet.user.username %></a></h2>
-
 <h3><a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a></h3>
-<h3><a href="/tweets/<%= @tweet.id %>/delete">Delete Tweet</a></h3>
+<p><form method="post" action="/tweets/<%= @tweet.id %>/delete">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <button type="submit" name="delete" value="delete">Delete Tweet</button>
+</form></p>
