added password security

--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -7,6 +7,7 @@ Tweets:
 <%end%>
 
 <form action="/tweets/<%=@tweets.slug%>" method="post">
-
+    Edit Tweet:
+    <input type="text" name="tweet[content]" id="tweet content">
 
 </form>
