--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,5 +1,5 @@
 <h1>Create a Tweet</h1>
-<form action="/tweets" method="post">
+<form action="/tweets/new" method="post">
 
 Content: <input type="text" name="tweet[content]" id="content">
 <br />
