--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,11 +1,11 @@
 
 <h1>New User Signup</h1>
 <form method="post" action="/signup">
-    username:<input type="text" id="username" name="user[username]">
+    username:<input type="text" id="username" name="username">
     <br></br>
-    email <input type="text" id="email" name="user[email]">
+    email <input type="text" id="email" name="email">
     <br></br>
-    password<input type="password" id="password" name="user[password]">
+    password<input type="password" id="password" name="password">
 
    
     <input type="submit" value="Signup">
