Passing User specs

--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,7 +1,7 @@
 <h1>Sign up for Fwitter</h1>
 
 <form action="/signup" method="post">
-  <label>Username:</label> <input type="text" name="user[username]" />
+  <label>Username:</label> <input type="text" name="username" />
   <br /><br />
   <label>Email:</label> <input type="text" name="email" />
   <br /><br />
