--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,9 @@
-<h1>Login</h1>
+<h1>Login to Fwitter</h1>
+
+<form method="post" action="/login">
+  <label>Username:</label> <input type="text" name="username" />
+  <br /><br />
+  <label>Password:</label> <input type="password" name="password" />
+  <br /><br />
+  <input type="submit" value="Login">
+</form>
