--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,3 @@
-<h1>Welcome to Fwitter</h1>
+<h2>Welcome to Fwitter</h2>
 
-<a href="/signup">Sign Up</a>
+<a href="/signup">Sign Up</a> or <a href="/login">Login</a>
