--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,4 +1,4 @@
-<h1>Sign up for Fwitter</h1>
+<h2>Sign Up</h2>
 
 <form action="/signup" method="post">
   <label>Username:</label> <input type="text" name="username" />
