--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,6 @@
-<h1><%= current_user.username %> Tweets</h1>
+<h1>Welcome, to Fwitter!</h1>
 
+<h2>Tweets</h2>
 <% @tweets.each do |tweet| %>
   <%= tweet.content %>
   <% end %>
