created login and logout routes

--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,7 +1,1 @@
-<h1>"Welcome, <%= @user.username %>!"</h1>
-
-<a href="/tweets/new">Create a new tweet</a>
-
-<% @tweets.each do |tweet| %>
-  <a href="tweets/<%= tweet.id %>"><%= tweet.content %></a>
-<% end %>
+<h1>Welcome,</h1>
