--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,2 +1,2 @@
 <h1>Welcome to Fwitter</h1>
-<h4>Please sign up or login to access your Fwitter account</h4>
+<h4>Please <a href="/signup">sign up</a> or <a href="/login">log in</a> to access your Fwitter account</h4>
