--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,1 +1,5 @@
-<p>"tweeting!"</p>
+<h1>Tweets by <%= @user.username %></h1>
+
+<% @tweets.each do |tweet| %>
+    <p><%= tweet.content%></p>
+<% end %>
