--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -10,8 +10,7 @@
 
 <h2>Delete</h2>
 
-<form action="/tweets/<%=@tweet.id%>/delete" method="POST">
-<input type="hidden" id="hidden" name="_method" value="delete">
-<textarea value="<%= @tweet.content %>" name="content" rows="4" cols="35"></textarea><br>
-<button id="Delete Tweet" type="submit">Delete Tweet</button>
+<form action="/tweets/<%= @tweet.id %>" method="POST">
+    <input type="hidden" id="hidden" name="_method" value="delete">
+    <input type="submit" value="Delete Tweet">
 </form>
