--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,2 +1,18 @@
 <h3><%= @tweet.content %><rb>
-<h4><a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a> or <a href="/tweets/<%= @tweet.id %>/delete">Delete Tweet</a></h4>
+
+<h2>Edit</h2>
+
+<form action="/tweets/<%=@tweet.id%>" method="POST">
+<input type="hidden" id="hidden" name="_method" value="patch">
+
+    <label>Edit Tweet</label><br>
+    <textarea value="<%= @tweet.content %>" name="content" rows="4" cols="35"></textarea><br>
+    <button id="submit" type="submit">Edit Tweet</button>
+</form>
+
+<h2>Delete</h2>
+
+<form action="/tweets/<%= @tweet.id %>" method="POST">
+    <input type="hidden" id="hidden" name="_method" value="delete">
+    <input type="submit" value="Delete Tweet">
+</form>
