Fixes tweet edit and delete logic. Done.

--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,3 +1,7 @@
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
+
 <h2>Edit</h2>
 
 <form action="/tweets/<%=@tweet.id%>" method="POST">
