--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,3 +1,6 @@
+<% binding.pry %>
+<% if Helpers.is_logged_in?(session)%>
+
 <form action="/signup" method="post">
   <label>Username:</label>
   <input type="text" name="username">
@@ -13,3 +16,4 @@
 
   <input type="submit" value="Sign Up">
 </form>
+<% end %>
