--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,9 +1,12 @@
 
 <% if Helpers.is_logged_in?(session) %>
+
   <form action="/tweets" method="post">
     <label>Tweet: </label>
     <input type="text" name="content">
 
     <input type="submit" value="submit">
   </form>
+<% else %>
+  <% redirect to '/login' %>
 <% end %>
