--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,10 +1,16 @@
 
 <% if Helpers.is_logged_in?(session) %>
+
 <% @user = User.find_by( username: session[:username] )%>
   "Welcome, <%= @user.username %> look at this tweet"
-  <% @user.tweets.each do |tweet|%>
-    <%= tweet.content %>
-  <% end %>
+
+  <br><br>
+  <ul>
+    <% @user.tweets.each do |tweet|%>
+      <li><%= tweet.content %></li>
+    <% end %>
+  </ul>
+
 <% else %>
   <% redirect to '/login' %>
 <% end %>
