added bootstrap and css styling

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,6 +1,9 @@
+<div class="container" id="form1">
+
 <h1>Create a New Tweet</h1>
 
 <form action="/tweets" method="POST">
 	<input type="text" name="content" id="content">
-	<input type="submit" name="submit" value="submit">
+	<input class="btn btn-secondary" type="submit" value="Submit" id="edit_button">
 </form>
+</div>
