--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,11 @@
-<h1>Welcome to Fwitter</h1>
 
-<a href="/login">Login</a>
-<br></br>
-<a href="/signup">Sign Up</a>
+<div class="container" id="form1">
+    </br>
+    <h1>Welcome to Fwitter</h1>
+
+    <button type="button" class="btn btn-secondary"><a href="/login">Login</a></button>
+       <br> </br>
+
+    <button type="button" class="btn btn-secondary"><a href="/signup">Sign Up</a></button>
+    <br> </br>
+</div>
