--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,10 +1,13 @@
+<div class="container" id="form1">
+
 <h1>Edit Tweet</h1>
 
-<%= @tweet.content %>
+<p>Tweet to be edited: </p><%= @tweet.content %>
 
 <form method="POST" action="/tweets/<%=@tweet.id%>">
 	<input id="hidden" type="hidden" name="_method" value="patch">
 	<input type="text" name="content" id="content">
 
-	<input type="submit" name="submit" value="submit">
+	<input class="btn btn-secondary" type="submit" value="Submit" id="edit_button">
 </form>
+</div>
