--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,8 +1,15 @@
+<div class="container-fluid" id="form1">
+
 <h2>Sign Up for Fwitter</h2>
+
 <form action="/signup" method="POST">
 	Username:<input type="text" name="username"></br>
-	Email:<input type="text" name="email"></br>
+	Email:<input type="text" name="email" id="email"></br>
 	Password:<input type="password" name="password"></br>
 
-	<input type="submit" name="Sign Up">
+
+<input class="btn btn-secondary" type="submit" value="Sign Up" name="Sign Up">
 </form>
+
+
+</div>
