--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,6 +1,14 @@
+
+<div class="container" id="form1">
+    
 <h2>Login</h2>
+
 <form action="/login" method="POST">
-	Username:<input type="text" name="username"></br>
-	Password:<input type="password" name="password"></br>
-	<input type="submit" value="submit">
+	<label>Username:</label><input type="text" name="username"></br>
+	<label>Password:</label><input type="password" name="password"></br>
+    
+	   <input class="btn btn-secondary" type="submit" value="Login">
 </form>
+
+
+</div>
