--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -3,4 +3,5 @@
 <p>Your Username: <input type="text" name="username", id="name"></p>
 <p>Your Email: <input type="text" name="email", id="email"></p>
 <p>Your Password: <input type="text" name="password", id="password"></p>
+<input type="submit" name="submit">
 <br></br>
