--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,3 +3,9 @@
   <label>Click to signup</label>
   <input type="submit" value="Signup">
 </form>
+
+<form action="/login" method="get">
+  <label>Login</label>
+  <input type="submit" value="Login">
+  
+</form>
