--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -14,5 +14,5 @@
   <label>Delete Tweet</label>
   <textarea rows="4" cols="40">Edit tweet here...
   </textarea>
-  <input type="submit" value="Edit">
+  <input type="submit" value="Delete Tweet">
 </form>
